<resources>
    <string name="app_name">Prueba</string>
    <string name="title_activity_new_persona">NewPersona</string>
    <string name="title_activity_mod_persona">ModPersona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="edad">Edad</string>
    <string name="edad_">Edad:</string>
    <string name="a_adir">Añadir</string>
    <string name="apellido">Apellido</string>
    <string name="apellido_">Apellido:</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_">Nombre:</string>
    <string name="dni_">DNI:</string>
    <string name="dni">DNI</string>
    <string name="modificar">Modificar</string>
    <string name="realmddbb">RealmDDBB</string>
    <string name="mperalta">mperalta</string>
    <string name="genero_">H o M</string>
    <string name="genero">Genero:</string>
    <string name="afegir">Afegir</string>
    <string name="llistar">Llistar</string>
</resources>
